--- a/Practica3/Practica3/segurosgui/pom.xml
+++ b/Practica3/Practica3/segurosgui/pom.xml
@@ -20,6 +20,13 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>es.unican.is2</groupId>
+      <artifactId>seguroscommon</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
