--- a/Practica3/Practica3/segurosmain/pom.xml
+++ b/Practica3/Practica3/segurosmain/pom.xml
@@ -21,6 +21,28 @@
 
   <dependencies>
     <dependency>
+      <groupId>es.unican.is2</groupId>
+      <artifactId>seguroscommon</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>es.unican.is2</groupId>
+      <artifactId>segurosdao</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>es.unican.is2</groupId>
+      <artifactId>segurosbusiness</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>es.unican.is2</groupId>
+      <artifactId>segurosgui</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
       <version>2.3.1</version>
