--- a/Practica3/Practica3/segurosbusiness/pom.xml
+++ b/Practica3/Practica3/segurosbusiness/pom.xml
@@ -21,6 +21,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>es.unican.is2</groupId>
+      <artifactId>segurosdao</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
       <version>2.3.1</version>
