--- a/Practica3/Practica3/seguroscommon/pom.xml
+++ b/Practica3/Practica3/seguroscommon/pom.xml
@@ -20,7 +20,11 @@
   </properties>
 
   <dependencies>
-    
+    <dependency>
+      <groupId>es.unican.is2</groupId>
+      <artifactId>segurosdao</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
