--- a/Practica3/Practica3/segurosbusiness/pom.xml
+++ b/Practica3/Practica3/segurosbusiness/pom.xml
@@ -15,11 +15,8 @@
   <packaging>jar</packaging>
 
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
+  
+
 
   <dependencies>
     <dependency>
@@ -52,7 +49,7 @@
           </descriptorRefs>
           <archive>
             <manifest>
-              <mainClass>es.unican.is2.practica1b.Main</mainClass>
+              <mainClass>es.unican.is2.segurosmain.Runner</mainClass>
             </manifest>
           </archive>
         </configuration>
