--- a/Practica3/Practica3/seguroscommon/pom.xml
+++ b/Practica3/Practica3/seguroscommon/pom.xml
@@ -13,12 +13,8 @@
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
-
+  
+  
   <packaging>jar</packaging>
 
   <dependencies>
@@ -54,7 +50,7 @@
           </descriptorRefs>
           <archive>
             <manifest>
-              <mainClass>es.unican.is2.practica1b.Main</mainClass>
+              <mainClass>es.unican.is2.segurosmain.Runner</mainClass>
             </manifest>
           </archive>
         </configuration>
