--- a/Practica4/Practica4/segurosgui/pom.xml
+++ b/Practica4/Practica4/segurosgui/pom.xml
@@ -15,7 +15,6 @@
   <packaging>jar</packaging>
 
 
-
   <dependencies>
 
     <dependency>
@@ -34,12 +33,20 @@
       <artifactId>jaxb-impl</artifactId>
       <version>2.3.3</version>
     </dependency>
+
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <groupId>org.easytesting</groupId>
+      <artifactId>fest-swing</artifactId>
+      <version>1.2.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.9.2</version>
       <scope>test</scope>
     </dependency>
+    
   </dependencies>
 
   <build>
