--- a/Practica4/Practica4/segurosgui/pom.xml
+++ b/Practica4/Practica4/segurosgui/pom.xml
@@ -24,6 +24,12 @@
     </dependency>
 
     <dependency>
+      <groupId>es.unican.is2</groupId>
+      <artifactId>segurosdao</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
       <version>2.3.1</version>
