--- a/Practica4/Practica4/segurosmain/pom.xml
+++ b/Practica4/Practica4/segurosmain/pom.xml
@@ -50,11 +50,11 @@
       <version>2.3.3</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.9.2</version>
       <scope>test</scope>
-    </dependency>
+      </dependency>
   </dependencies>
 
   <build>
